--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
+  --bs-brown: brown;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
@@ -20,44 +21,42 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-gold: gold;
-  --bs-font-sedan: 'Sedan SC', sans-serif;
-  --bs-font-inter: 'Inter', sans-serif;
-  --bs-gradient: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
-  --bs-gradient-button: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
-  --bs-brown: brown;
 }
 
 body {
   width: 100%;
   height: 100%;
+  font-family: "Inter", sans-serif;
+  color: #fff;
+  background: linear-gradient(89.5deg, rgba(238, 223, 145, 0.79) 36.31%, #CC6A23 143.64%) !important;
 }
 
 .navbar {
-  background: var(--bs-gradient-button) !important;
+  background: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%) !important;
 }
 
-.navbar #home, .navbar #menu {
-  background: var(--bs-gradient-button);
+.navbar #home,
+.navbar #menu {
+  background: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
   border: none;
   color: brown;
 }
 
 .caption {
-  font-family: var(--bs-font-sedan);
+  font-family: "Sedan SC", sans-serif;
 }
 
 .offcanvas {
   background: rgba(181, 96, 49, 0.85) !important;
-  font-family: var(--bs-font-inter);
+  font-family: "Inter", sans-serif;
 }
 
 .offcanvas h5 {
-  color: var(--bs-white);
+  color: #fff;
 }
 
 .offcanvas .body {
-  color: var(--bs-white);
+  color: #fff;
   font-size: 16px;
 }
 
@@ -68,7 +67,7 @@ img {
   position: relative;
 }
 
-/* Style the button and place it in the middle of the container/image */
+/* Style the button and place it in the middle of the container or image */
 .start {
   width: 115px;
   height: 50px;
@@ -81,7 +80,7 @@ img {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background: var(--bs-gradient-button);
+  background: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
   color: white;
   font-size: 16px;
   padding: 12px 24px;
@@ -91,8 +90,51 @@ img {
 }
 
 .container-box {
-  width: 100%;
-  height: 200px;
-  border-style: ridge;
+  width: 85%;
+  height: 255px;
+  background: linear-gradient(89.5deg, rgba(238, 223, 145, 0.79) 36.31%, #CC6A23 143.64%);
+  -webkit-box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  margin-left: 7%;
+}
+
+.container-box h3,
+.container-box .form-select {
+  margin-left: 6%;
+}
+
+.container-box h3 {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-weight: bold;
+}
+
+.container-box .form-select {
+  width: 235px !important;
+  border-color: #212529;
+}
+
+.fight {
+  width: 120px;
+  height: 55px;
+  position: absolute;
+  font-family: "Sedgwick Ave Display", cursive;
+  top: 85%;
+  left: 50%;
+  -webkit-filter: drop-shadow(0px 2px 4px rgba(105, 96, 101, 0.3)) !important;
+          filter: drop-shadow(0px 2px 4px rgba(105, 96, 101, 0.3)) !important;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 15px !important;
 }
 /*# sourceMappingURL=main.css.map */
