--- a/css/main.css
+++ b/css/main.css
@@ -122,19 +122,37 @@ img {
   height: 55px;
   position: absolute;
   font-family: "Sedgwick Ave Display", cursive;
-  top: 85%;
+  font-weight: 500;
+  top: 75%;
   left: 50%;
-  -webkit-filter: drop-shadow(0px 2px 4px rgba(105, 96, 101, 0.3)) !important;
-          filter: drop-shadow(0px 2px 4px rgba(105, 96, 101, 0.3)) !important;
+  -webkit-box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
+  background: linear-gradient(89.5deg, rgba(238, 223, 145, 0.79) 36.31%, #CC6A23 143.64%);
   color: white;
   font-size: 16px;
   padding: 12px 24px;
   border: none;
   cursor: pointer;
   border-radius: 15px !important;
+}
+
+.container-box-second {
+  width: 85%;
+  height: 435px;
+  background: linear-gradient(89.5deg, rgba(238, 223, 145, 0.79) 36.31%, #CC6A23 143.64%);
+  -webkit-box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  margin-left: 7%;
+}
+
+.container-box-second img {
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
