--- a/css/grid.css
+++ b/css/grid.css
@@ -22,4 +22,33 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
 }
-/*# sourceMappingURL=root.css.map */
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.container .heading-img {
+  width: 300px;
+  height: 65px;
+  position: relative;
+}
+
+.container .home-img {
+  position: absolute;
+  top: 5%;
+  left: 12%;
+  width: 80px;
+  height: 65px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.container .menu-img {
+  position: absolute;
+  top: 5%;
+  width: 80px;
+  height: 65px;
+}
+/*# sourceMappingURL=grid.css.map */
