--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,30 +1,3 @@
-$bs-blue: #0d6efd;
-$bs-indigo: #6610f2;
-$bs-purple: #6f42c1;
-$bs-pink: #d63384;
-$bs-red: #dc3545;
-$bs-orange: #fd7e14;
-$bs-yellow: #ffc107;
-$bs-green: #198754;
-$bs-teal: #20c997;
-$bs-cyan: #0dcaf0;
-$bs-white: #fff;
-$bs-gray: #6c757d;
-$bs-gray-dark: #343a40;
-$bs-brown: brown;
-$bs-primary: #0d6efd;
-$bs-secondary: #6c757d;
-$bs-success: #198754;
-$bs-info: #0dcaf0;
-$bs-warning: #ffc107;
-$bs-danger: #dc3545;
-$bs-light: #f8f9fa;
-$bs-dark: #212529;
-$bs-font-sedan: 'Sedan SC', sans-serif;
-$bs-font-inter: 'Inter', sans-serif;
-$bs-gradient:linear-gradient(103.88deg, #D57A27 -9.44%, #EEDF91 65.72%);;
-$bs-gradient-button: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
-
-$font-button:'Sedgwick Ave Display', cursive;
+$bs-font-tinos: 'Tinos', serif;
+$bs-gradient:linear-gradient(140.36deg, #25477D 4.7%, rgba(50, 148, 190, 0.48) 94.85%);
 $color-optional: #25477D;
-$bg-navbar: linear-gradient(92.79deg, #D57A27 -0.44%, #EEDF91 44.29%, #CC6A23 99.42%);
